package com.amsterdam.cutetudee.presentation.utils

val addEditBottomSheetTag = "addEditBottomSheetTag"
val daysLazyRowTag = "daysLazyRowTag"
val deleteTag = "Delete"